<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:title="@string/our_locations"
        app:showAsAction="never" />
    <item android:id="@+id/item3"
          android:title="@string/about_us"
          app:showAsAction="never"  />
    <item
        android:id="@+id/item2"
        android:icon="@drawable/ic_showing_toast"
        android:title="@string/our_menu"
        app:showAsAction="never">
        <menu>
            <group>
                <item
                    android:id="@+id/sub_item1"
                    android:title="@string/main_courses"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/sub_item2"
                    android:title="@string/side_dishes"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>


</menu>