<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogFrag"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/RatingHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_rating_matters"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"/>
    <RadioGroup
        android:id="@+id/RatingRadioGroup"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@+id/RatingHeaderTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    <RadioButton
        android:id="@+id/excellent_RB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excellent"
        />

        <RadioButton
            android:id="@+id/average_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average"
            />

        <RadioButton
            android:id="@+id/not_very_good_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_very_good"
            />
        <RadioButton
            android:id="@+id/bad_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad"
            />

    </RadioGroup>
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/RatingRadioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/submit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RatingRadioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>